basic styles and menu content

--- a/www/carFront/scripts/menu/menu.html
+++ b/www/carFront/scripts/menu/menu.html
@@ -18,20 +18,46 @@
 			<h1 class="title">Araba.Net.Tr</h1>
 		</ion-header-bar>
 		<ion-content>
-			<ion-list>
+      <img src="../../carFront/images/araba.png" alt="">
+
+      <ion-list>
 				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/articles">
-					<i class="icon ion-ios-list"></i>
-					2. el arabalar
+					<i class="icon ion-ios-list" style="color: #cb5735;"></i>
+					<b>2. el arabalar</b>
+				</ion-item>
+				<ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+					<i class="icon ion-plus-round" style="color: #cb5735;"></i>
+          <b>ilan ekle</b>
 				</ion-item>
         <ion-item nav-clear menu-close class="item-icon-left" href="#/app/carComparisation">
-          <i class="icon ion-model-s"></i>
-          Araba Karsilastirma
+          <i class="icon ion-model-s" style="color: #cb5735;"></i>
+          <b>Araba Karsilastirma</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-chatbubbles" style="color: #cb5735;"></i>
+          <b>Yakıt Tüketimi</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-chatbubbles" style="color: #cb5735;"></i>
+          <b>Mesafe Hesaplama</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-alert-circled" style="color: #cb5735;"></i>
+          <b>Yol Durumu</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-map" style="color: #cb5735;"></i>
+          <b>Navigasyon</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-calculator" style="color: #cb5735;"></i>
+          <b>Kredi Teklifleri</b>
+        </ion-item>
+        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+          <i class="icon ion-help-buoy" style="color: #cb5735;"></i>
+          <b>Sigorta Teklifi</b>
         </ion-item>
 
-				<ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
-					<i class="icon ion-chatbubbles"></i>
-					ilan ekle
-				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
