fuel consumption added

--- a/www/scripts/menu/menu.html
+++ b/www/scripts/menu/menu.html
@@ -14,14 +14,11 @@
 	</ion-side-menu-content>
 
 	<ion-side-menu side="left">
-		<ion-header-bar class="bar-positive">
-			<h1 class="title">Araba.Net.Tr</h1>
-		</ion-header-bar>
 		<ion-content>
-      <img src="../../carFront/images/araba.png" alt="">
+      <img src="../../images/araba.png" alt="">
 
       <ion-list>
-				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/articles">
+				<ion-item nav-clear menu-close class="item-icon-left" href="#/app/carSearch">
 					<i class="icon ion-ios-list" style="color: #cb5735;"></i>
 					<b>0 km Araba</b>
 				</ion-item>
@@ -33,7 +30,7 @@
           <i class="icon ion-model-s" style="color: #cb5735;"></i>
           <b>Araba Karsilastirma</b>
         </ion-item>
-        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+        <ion-item nav-clear menu-close class="item-icon-left" href="#/app/make/4">
           <i class="icon ion-chatbubbles" style="color: #cb5735;"></i>
           <b>Yakıt Tüketimi</b>
         </ion-item>
@@ -41,19 +38,11 @@
           <i class="icon ion-chatbubbles" style="color: #cb5735;"></i>
           <b>Mesafe Hesaplama</b>
         </ion-item>
-        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
-          <i class="icon ion-alert-circled" style="color: #cb5735;"></i>
-          <b>Yol Durumu</b>
-        </ion-item>
-        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
-          <i class="icon ion-map" style="color: #cb5735;"></i>
-          <b>Navigasyon</b>
-        </ion-item>
         <ion-item nav-clear menu-close class="item-icon-left" href="#/app/questionAndAnswer">
           <i class="icon ion-chatbubbles" style="color: #cb5735;"></i>
           <b>Soru-Cevap</b>
         </ion-item>
-        <ion-item nav-clear menu-close class="item-icon-left" href="/carAdmin">
+        <ion-item nav-clear menu-close class="item-icon-left" href="#/app/taxCalculator">
           <i class="icon ion-calculator" style="color: #cb5735;"></i>
           <b>MTV,ÖTV Hesaplama</b>
         </ion-item>
