--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,19 @@
     <script src="scripts/questionAndAnswer/questionAndAnswer.controller.js"></script>
     <script src="scripts/questionAndAnswer/questionAndAnswer.service.js"></script>
 
+    <script src="scripts/carSearch/carSearch.module.js"></script>
+    <script src="scripts/carSearch/carSearch.controller.js"></script>
+    <script src="scripts/carSearch/carSearch.service.js"></script>
+
+    <script src="scripts/fuelConsumption/fuelConsumption.module.js"></script>
+    <script src="scripts/fuelConsumption/fuelConsumption.controller.js"></script>
+    <script src="scripts/fuelConsumption/fuelConsumption.service.js"></script>
+
+    <script src="scripts/taxCalculator/taxCalculator.module.js"></script>
+    <script src="scripts/taxCalculator/taxCalculator.controller.js"></script>
+    <script src="scripts/taxCalculator/taxCalculator.service.js"></script>
+
+
     <!-- endbuild -->
 	</head>
 
